fix: text alignment update for live

--- a/assets/css/widgets/text-marquee.css
+++ b/assets/css/widgets/text-marquee.css
@@ -6,6 +6,8 @@
 
 .deensimc-text-marquee .deensimc-scroll-text {
   white-space: nowrap;
+  line-height: 1.2;
+  margin-bottom: 0;
   transition: color 0.2s ease;
 }
 
